--- a/src/BlogSite.html
+++ b/src/BlogSite.html
@@ -13,6 +13,8 @@
     <style>
         body {
             font-family: 'Advent Pro';font-size: 22px;
+            background-image: url("image/javaImaje.jpg");
+            background-size: contain;
         }
     </style>
 
@@ -41,17 +43,18 @@
 <!-- div -->
 <div class="container-fluid">
     <!-- A fluid container that uses the full witdh -->
-    <h1>Blog Home</h1>
+    <h1 class="text-white">Blog Home</h1>
     <br>
     <!-- Tip: use bg-* and text-* utilities to style the card -->
 
-    <div class="row row-cols-2">
-        <div class="col col-lg-3">
-        <div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 100rem;">
+    <div class="row row-cols-1">
+        <div class="col">
+        <div class="card text-white bg-dark mb-3 d-inline-block" style="width: 100%;">
             <div class="card-header">14 May 2020</div>
             <div class="card-body">
                 <h4 class="card-title">Java Inheritance</h4>
-                <p class="card-text">Inheritance is an important pillar of OOP(Object Oriented Programming).
+                <p class="card-text">
+                    Inheritance is an important pillar of OOP(Object Oriented Programming).
                     It is the mechanism in java by which one class is allow to inherit the features(fields and methods) of another class.
                     <span class="text-dark"><a
                             href="javainhertance.html">View more</a> </span>
@@ -60,8 +63,8 @@
 
         </div>
         </div>
-        <div class="col col-lg-3">
-            <div class=" card text-white bg-dark mb-3 d-inline-block" style="max-width: 100rem;">
+        <div class="col">
+            <div class=" card text-white bg-dark mb-3 d-inline-block" style="width: 100%;">
                 <div class="card-header">14 May 2020</div>
                 <div class="card-body">
                     <h4 class="card-title">GitHub</h4>
@@ -73,21 +76,34 @@
                 </div>
             </div>
         </div>
-        <div class="col col-lg-3">
-            <div class=" card text-white bg-dark mb-3 d-inline-block" style="max-width: 100rem;">
+        <div class="col">
+            <div class=" card text-white bg-dark mb-3 d-inline-block" style="width: 100%;">
                 <div class="card-header">14 May 2020</div>
                 <div class="card-body">
-                    <h4 class="card-title">Composition</h4>
-                    <p class="card-text">Compositions are important.</p>
+                    <h4 class="card-title">Polymorphism</h4>
+                    <p class="card-text">
+                        The dictionary definition of polymorphism refers to a principle in biology in which an organism or species can have many different forms or stages.
+                        This principle can also be applied to object-oriented programming and languages like the Java language.
+                        Subclasses of a class can define their own unique behaviors and yet share some of the same functionality of the parent class.
+                        <span class="text-dark"><a
+                                href="https://docs.oracle.com/javase/tutorial/java/IandI/polymorphism.html">View more</a>
+                        </span>
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="col col-lg-3">
-            <div class=" card text-white bg-dark mb-3 d-inline-block" style="max-width: 100rem;">
+        <div class="col">
+            <div class=" card text-white bg-dark mb-3 d-inline-block" style="width: 100%;">
                 <div class="card-header">14 May 2020</div>
                 <div class="card-body">
                     <h4 class="card-title">Abstraction</h4>
-                    <p class="card-text">Some abstractions.</p>
+                    <p class="card-text">
+                        Java has emerged as the object-oriented programming language of choice.
+                        Some of the important concepts of Java include:
+                        <span class="text-dark"><a
+                                href="https://docs.oracle.com/en/database/oracle/oracle-database/12.2/jjdev/Java-overview.html#GUID-17B81887-C338-4489-924D-FDDF2468DEA7">View more</a>
+                        </span>
+                    </p>
                 </div>
             </div
         </div>
