--- a/src/BootcamInfo.html
+++ b/src/BootcamInfo.html
@@ -9,10 +9,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Bootcamp Info</title>
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <style>
+        body {
+            font-family: 'Advent Pro';font-size: 22px;
+            background-image: url("image/javaImaje.jpg");
+            background-size: contain;
+        }
+    </style>
+
+    <title>Bootcamp Blog</title>
 </head>
 <body>
-
 <!-- Navbar with dark them -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="BlogSite.html">Home</a>
@@ -25,14 +33,14 @@
                 <a class="nav-link" href="BootcamInfo.html">About the Bootcamp</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="ProfilePage.html">About me</a>
+                <a class="nav-link" href="ProfilePage.html">About Us</a>
             </li>
 
         </ul>
     </div>
 </nav> <br>
 
-<div>
+<div class="text-white container-fluid">
     <h2>WHAT IS THE PROGRAM?</h2>
     <p>The Java Web Developer Boot Camp is an 8 hour a day (9 am - 5 pm, M-F) 8-week, immersive software engineering program funded by the Department of Labor.
         This course aims to increase the number of skilled software developers in this country.
@@ -48,6 +56,10 @@
         You'll learn to create web pages. You'll use frameworks and stored procedures.
         You'll connect to a database using the Java Persistence API(JPA) and Hibernate, and most importantly, all assignments are submitted through git,
         so you will learn to develop using best practices in class, to make it easy to contribute value when you are on the job.
+        <span>Here is more information on
+            <a href="https://www.montgomerycollege.edu/workforce-development-continuing-education/information-technology/americas-promise-program/java-web-developer-boot-camp.html">Montgomery college</a>
+            website.
+        </span>
     </p>
 
 </div>
