--- a/src/GitHub.html
+++ b/src/GitHub.html
@@ -13,6 +13,8 @@
     <style>
         body {
             font-family: 'Advent Pro';font-size: 22px;
+            background-image: url("image/javaImaje.jpg");
+            background-size: contain;
         }
     </style>
 
@@ -40,7 +42,7 @@
 
 
 
-<div class="container-fluid">
+<div class="container-fluid text-white">
     <h1>GitHub</h1>
     <p>
         Using Git
