--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -9,16 +9,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
     <style>
         body {
-            font-family: 'Advent Pro';font-size: 22px;
+            font-family: 'Advent Pro'; font-size: 22px;
+            background-image: url("image/javaImaje.jpg");
+            background-size: contain;
         }
     </style>
 
+
     <title>Bootcamp Blog</title>
 </head>
+
 <body>
 <!-- Navbar with dark them -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -39,25 +45,29 @@
     </div>
 </nav> <br>
 
-
 <div class="container-fluid">
+    <h2 class="text-white">Profile</h2>
+    <br>
+
     <div class="row row-cols-2">
         <div class="col col-lg-3">
             <div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 100rem;">
-                <div class="card-header">Web Developer</div>
-                <img src="image/image.png" alt="image" width="200" height="200">
-                <div class="card-body">
-                    <h4 class="card-title">Eyasu Haile</h4>
-                    <p class="card-text">Full stack developer.<br>
-                        <a href="https://www.linkedin.com/in/eyasu-haile-6953b983/">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="https://github.com/eyasuh">
-                            <i class="fab fa-github-square"></i>
-                        </a>
+            <div class="card-header">Web Developer</div>
+            <img src="image/image.png" alt="image" width="200" height="200">
+            <div class="card-body">
+                <h4 class="card-title">Eyasu Haile</h4>
+                <p class="card-text">I am currently taking a full stack development boot camp at montgomery college.
+                    I have experience in HTML, CSS,and Java. I am comfortable around in both back-end and front-end, although i prefer
+                    back-end development. If you have more question contact me on linked in.<br>
+                    <a href="https://www.linkedin.com/in/eyasu-haile-6953b983/">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/eyasuh">
+                        <i class="fab fa-github-square"></i>
+                    </a>
 
-                    </p>
-                </div>
+                </p>
+            </div>
 
             </div>
         </div>
@@ -68,7 +78,8 @@
                 <div class="card-body">
                     <h4 class="card-title">Future Partner</h4>
                     <p class="card-text">
-                        CSS expert
+                        Visually creative, can design web pages and logos, and produce drafts. They need to be CSS and HTML expert and
+                        feel comfortable working with others in the field.
                         <a href="https://www.linkedin.com/in/eyasu-haile-6953b983/">
                             <i class="fab fa-linkedin"></i>
                         </a>
