--- a/src/javainhertance.html
+++ b/src/javainhertance.html
@@ -8,10 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <style>
         body {
             font-family: 'Advent Pro';font-size: 22px;
+            background-image: url("image/javaImaje.jpg");
+            background-size: contain;
         }
     </style>
 
@@ -37,7 +40,7 @@
     </div>
 </nav> <br>
 
-<div class="container-fluid">
+<div class="container-fluid text-white">
     <h2>Inheritance in Java</h2>
     <p>
         Inheritance is an important pillar of OOP(Object Oriented Programming). It is the mechanism in java by which one class is allow to inherit the features(fields and methods) of another class.
