--- a/src/BlogSite.html
+++ b/src/BlogSite.html
@@ -86,7 +86,7 @@
                         This principle can also be applied to object-oriented programming and languages like the Java language.
                         Subclasses of a class can define their own unique behaviors and yet share some of the same functionality of the parent class.
                         <span class="text-dark"><a
-                                href="https://docs.oracle.com/javase/tutorial/java/IandI/polymorphism.html">View more</a>
+                                href="Polymorphism.html">View more</a>
                         </span>
                     </p>
                 </div>
@@ -101,7 +101,7 @@
                         Java has emerged as the object-oriented programming language of choice.
                         Some of the important concepts of Java include:
                         <span class="text-dark"><a
-                                href="https://docs.oracle.com/en/database/oracle/oracle-database/12.2/jjdev/Java-overview.html#GUID-17B81887-C338-4489-924D-FDDF2468DEA7">View more</a>
+                                href="Abstraction.html">View more</a>
                         </span>
                     </p>
                 </div>
@@ -110,11 +110,6 @@
     </div>
 
 </div>
-
-
-
-
-
 
 
 
