--- a/src/BlogSite.html
+++ b/src/BlogSite.html
@@ -96,7 +96,7 @@
             <div class=" card text-white bg-dark mb-3 d-inline-block" style="width: 100%;">
                 <div class="card-header">14 May 2020</div>
                 <div class="card-body">
-                    <h4 class="card-title">Abstraction</h4>
+                    <h4 class="card-title">Overview of Java</h4>
                     <p class="card-text">
                         Java has emerged as the object-oriented programming language of choice.
                         Some of the important concepts of Java include:
